<resources>
    <string name="app_name">Healthy Recipe</string>
    <string name="txtTitle">Brushetta Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="btnRecipe">view Recipe</string>
    <string name="txtingredient">Ingredients</string>
    <string name="txtItem1">4 plum tomatos</string>
    <string name="txtItem2">6 basil leaves</string>
    <string name="txtItem3">3 galic clovex, chopped</string>
    <string name="tstItem4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">Combione the ingredients and add salt to taste. Top French bread slices with mix.</string>
</resources>